Sonar code cleanup