@@ -28,13 +28,12 @@ package org.knime.ext.textprocessing.nodes.transformation.termvector;
 import java.io.File;
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Hashtable;
+import java.util.HashMap;
 import java.util.List;
-import java.util.Set;
-
+import java.util.Map;
+import java.util.Map.Entry;
 import javax.swing.event.ChangeEvent;
 import javax.swing.event.ChangeListener;
-
 import org.knime.base.data.sort.SortedTable;
 import org.knime.core.data.DataCell;
 import org.knime.core.data.DataColumnSpec;
@@ -102,30 +101,24 @@ public class TermVectorNodeModel extends NodeModel {
     /**
      * Default name of column containing the terms.
      */
-    public static final String DEFAULT_DOCUMENT_COLNAME =
-        BagOfWordsDataTableBuilder.DEF_ORIG_DOCUMENT_COLNAME;
+    public static final String DEFAULT_DOCUMENT_COLNAME = BagOfWordsDataTableBuilder.DEF_ORIG_DOCUMENT_COLNAME;
 
 
     private int m_documentColIndex = -1;
 
     private int m_termColIndex = -1;
 
-    private final SettingsModelString m_colModel =
-        TermVectorNodeDialog.getColumnModel();
+    private final SettingsModelString m_colModel = TermVectorNodeDialog.getColumnModel();
 
-    private final SettingsModelBoolean m_booleanModel =
-        TermVectorNodeDialog.getBooleanModel();
+    private final SettingsModelBoolean m_booleanModel = TermVectorNodeDialog.getBooleanModel();
 
-    private final SettingsModelBoolean m_ignoreTagsModel =
-        TermVectorNodeDialog.getIgnoreTagsModel();
+    private final SettingsModelBoolean m_ignoreTagsModel = TermVectorNodeDialog.getIgnoreTagsModel();
 
-    private final SettingsModelString m_documentColModel =
-        TermVectorNodeDialog.getDocColModel();
+    private final SettingsModelString m_documentColModel = TermVectorNodeDialog.getDocColModel();
 
-    private SettingsModelBoolean m_asCollectionModel =
-        DocumentVectorNodeDialog.getAsCollectionModel();
+    private SettingsModelBoolean m_asCollectionModel = DocumentVectorNodeDialog.getAsCollectionModel();
 
-    private static DoubleCell DEFAULT_CELL = new DoubleCell(0.0);
+    private static final DoubleCell DEFAULT_CELL = new DoubleCell(0.0);
 
     private final TextContainerDataCellFactory m_termFac = TextContainerDataCellFactoryBuilder.createTermCellFactory();
 
@@ -142,8 +135,7 @@ public class TermVectorNodeModel extends NodeModel {
      * {@inheritDoc}
      */
     @Override
-    protected DataTableSpec[] configure(final DataTableSpec[] inSpecs)
-            throws InvalidSettingsException {
+    protected DataTableSpec[] configure(final DataTableSpec[] inSpecs) throws InvalidSettingsException {
         checkDataTableSpec(inSpecs[0]);
 
         DataTableSpec spec = null;
@@ -153,19 +145,16 @@ public class TermVectorNodeModel extends NodeModel {
         return new DataTableSpec[]{spec};
     }
 
-    private final void checkDataTableSpec(final DataTableSpec spec)
-    throws InvalidSettingsException {
-        DataTableSpecVerifier verifier = new DataTableSpecVerifier(spec);
+    private final void checkDataTableSpec(final DataTableSpec spec) throws InvalidSettingsException {
+        final DataTableSpecVerifier verifier = new DataTableSpecVerifier(spec);
         verifier.verifyMinimumDocumentCells(1, true);
         verifier.verifyTermCell(true);
         m_termColIndex = verifier.getTermCellIndex();
 
-        m_documentColIndex = spec.findColumnIndex(
-                m_documentColModel.getStringValue());
+        m_documentColIndex = spec.findColumnIndex(m_documentColModel.getStringValue());
         if (m_documentColIndex < 0) {
-            throw new InvalidSettingsException(
-                    "Index of specified document column is not valid! "
-                    + "Check your settings!");
+            throw new InvalidSettingsException("Index of specified document column is not valid! "
+                + "Check your settings!");
         }
     }
 
@@ -173,18 +162,17 @@ public class TermVectorNodeModel extends NodeModel {
      * {@inheritDoc}
      */
     @Override
-    protected BufferedDataTable[] execute(final BufferedDataTable[] inData,
-            final ExecutionContext exec) throws Exception {
+    protected BufferedDataTable[] execute(final BufferedDataTable[] inData, final ExecutionContext exec)
+        throws Exception {
         checkDataTableSpec(inData[0].getDataTableSpec());
 
-        m_documentColIndex = inData[0].getSpec().findColumnIndex(
-                m_documentColModel.getStringValue());
+        m_documentColIndex = inData[0].getSpec().findColumnIndex(m_documentColModel.getStringValue());
 
         int colIndex = -1;
         // Check if no valid column selected, the use of boolean values is
         // specified !
         if (!m_booleanModel.getBooleanValue()) {
-            String colName = m_colModel.getStringValue();
+            final String colName = m_colModel.getStringValue();
             colIndex = inData[0].getDataTableSpec().findColumnIndex(colName);
             if (colIndex < 0) {
                 throw new InvalidSettingsException("No valid column selected!");
@@ -192,26 +180,22 @@ public class TermVectorNodeModel extends NodeModel {
         }
 
         // Sort the data table first by term
-        List<String> colList = new ArrayList<String>();
-        colList.add(inData[0].getDataTableSpec().getColumnSpec(
-                m_termColIndex).getName());
-        boolean [] sortAsc = new boolean[colList.size()];
+        final List<String> colList = new ArrayList<String>();
+        colList.add(inData[0].getDataTableSpec().getColumnSpec(m_termColIndex).getName());
+        final boolean [] sortAsc = new boolean[colList.size()];
         sortAsc[0] = true;
-        SortedTable sortedTable = new SortedTable(inData[0], colList, sortAsc,
-                exec);
+        final SortedTable sortedTable = new SortedTable(inData[0], colList, sortAsc, exec);
 
         // hash table holding an index for each feature
-        Hashtable<Document, Integer> featureIndexTable =
-            new Hashtable<Document, Integer>();
+        Map<Document, Integer> featureIndexTable = new HashMap<Document, Integer>();
 
         // first go through data table to collect the features
         int currIndex = 0;
         RowIterator it = sortedTable.iterator();
         while (it.hasNext()) {
             exec.checkCanceled();
-            DataRow row = it.next();
-            Document d = ((DocumentValue)row.getCell(m_documentColIndex))
-                        .getDocument();
+            final DataRow row = it.next();
+            final Document d = ((DocumentValue)row.getCell(m_documentColIndex)).getDocument();
             if (!featureIndexTable.containsKey(d)) {
                 featureIndexTable.put(d, currIndex);
                 currIndex++;
@@ -221,46 +205,38 @@ public class TermVectorNodeModel extends NodeModel {
         // second go through data table to create feature vectors
         BufferedDataContainer dc;
         if (m_asCollectionModel.getBooleanValue()) {
-            dc = exec.createDataContainer(
-                    createDataTableSpecAsCollection(featureIndexTable));
+            dc = exec.createDataContainer(createDataTableSpecAsCollection(featureIndexTable));
         } else {
-            dc = exec.createDataContainer(
-                    createDataTableSpecAsColumns(featureIndexTable));
+            dc = exec.createDataContainer(createDataTableSpecAsColumns(featureIndexTable));
         }
 
         Term lastTerm = null;
-        List<DoubleCell> featureVector = initFeatureVector(
-                featureIndexTable.size());
+        List<DoubleCell> featureVector = initFeatureVector(featureIndexTable.size());
 
         it = sortedTable.iterator();
         while (it.hasNext()) {
             exec.checkCanceled();
-            DataRow row = it.next();
-            Document currDoc = ((DocumentValue)row.getCell(m_documentColIndex))
-                                .getDocument();
-            Term currTerm = ((TermValue)row.getCell(m_termColIndex))
-                                .getTermValue();
+            final DataRow row = it.next();
+            final Document currDoc = ((DocumentValue)row.getCell(m_documentColIndex)).getDocument();
+            final Term currTerm = ((TermValue)row.getCell(m_termColIndex)).getTermValue();
             double currValue = 1;
             if (colIndex > -1) {
-                currValue = ((DoubleValue)row.getCell(colIndex))
-                                .getDoubleValue();
+                currValue = ((DoubleValue)row.getCell(colIndex)).getDoubleValue();
             }
 
             // if current term is not equals last term, create new feature
             // vector for last term
             if (lastTerm != null) {
-                boolean equals = m_ignoreTagsModel.getBooleanValue()
-                ? currTerm.equalsWordsOnly(lastTerm)
-                        : currTerm.equals(lastTerm);
+                final boolean equals =
+                    m_ignoreTagsModel.getBooleanValue() ? currTerm.equalsWordsOnly(lastTerm) : currTerm
+                        .equals(lastTerm);
                 if (!equals) {
                     // add old feature vector to table
                     DataRow newRow;
                     if (m_asCollectionModel.getBooleanValue()) {
-                        newRow = createDataRowAsCollection(lastTerm,
-                                featureVector);
+                        newRow = createDataRowAsCollection(lastTerm, featureVector);
                     } else {
-                        newRow = createDataRowAsColumns(lastTerm,
-                                featureVector);
+                        newRow = createDataRowAsColumns(lastTerm, featureVector);
                     }
                     dc.addRowToTable(newRow);
                     // create new feature vector
@@ -291,36 +267,31 @@ public class TermVectorNodeModel extends NodeModel {
 
     private int m_rowKeyNr = 1;
 
-    private DataRow createDataRowAsCollection(final Term term,
-            final List<DoubleCell> featureVector) {
-        final RowKey rowKey = new RowKey(new Integer(m_rowKeyNr).toString());
+    private DataRow createDataRowAsCollection(final Term term, final List<DoubleCell> featureVector) {
+        final RowKey rowKey = new RowKey(Integer.valueOf(m_rowKeyNr).toString());
         m_rowKeyNr++;
         final DataCell termCell = m_termFac.createDataCell(term);
-        DataCell collectionCell = CollectionCellFactory.createSparseListCell(
-                featureVector, DEFAULT_CELL);
+        final DataCell collectionCell = CollectionCellFactory.createSparseListCell(featureVector, DEFAULT_CELL);
         return new DefaultRow(rowKey, new DataCell[]{termCell, collectionCell});
     }
 
-    private DataRow createDataRowAsColumns(final Term term,
-            final List<DoubleCell> featureVector) {
+    private DataRow createDataRowAsColumns(final Term term, final List<DoubleCell> featureVector) {
         final DataCell[] cells = new DataCell[featureVector.size() + 1];
         cells[0] = m_termFac.createDataCell(term);
         for (int i = 0; i < cells.length - 1; i++) {
             cells[i + 1] = featureVector.get(i);
         }
 
-        RowKey rowKey = new RowKey(new Integer(m_rowKeyNr).toString());
+        final RowKey rowKey = new RowKey(Integer.valueOf(m_rowKeyNr).toString());
         m_rowKeyNr++;
-        DataRow newRow = new DefaultRow(rowKey, cells);
+        final DataRow newRow = new DefaultRow(rowKey, cells);
 
         return newRow;
     }
 
-    private DataTableSpec createDataTableSpecAsCollection(
-            final Hashtable<Document, Integer> featureIndexTable) {
-        Hashtable<String, Integer> columnTitles =
-            new Hashtable<String, Integer>();
-        DataColumnSpec[] columnSpecs = new DataColumnSpec[2];
+    private DataTableSpec createDataTableSpecAsCollection(final Map<Document, Integer> featureIndexTable) {
+        final Map<String, Integer> columnTitles = new HashMap<String, Integer>();
+        final DataColumnSpec[] columnSpecs = new DataColumnSpec[2];
 
         // add document column
         DataColumnSpecCreator columnSpecCreator =
@@ -328,17 +299,19 @@ public class TermVectorNodeModel extends NodeModel {
         columnSpecs[0] = columnSpecCreator.createSpec();
 
         // add feature vector columns
-        columnSpecCreator = new DataColumnSpecCreator(
-                BagOfWordsDataTableBuilder.DEF_TERM_VECTOR_COLNAME,
+        columnSpecCreator =
+            new DataColumnSpecCreator(BagOfWordsDataTableBuilder.DEF_TERM_VECTOR_COLNAME,
                 ListCell.getCollectionType(DoubleCell.TYPE));
 
         if (featureIndexTable != null) {
-            String[] featureNames = new String[featureIndexTable.size()];
-            for (Document d : featureIndexTable.keySet()) {
-                int index = featureIndexTable.get(d);
+            final String[] featureNames = new String[featureIndexTable.size()];
+
+            for (Entry<Document, Integer> entry : featureIndexTable.entrySet()) {
+                final Document d = entry.getKey();
+                final int index = entry.getValue();
 
                 // avoid duplicate titles by adding numbers if titles are equal.
-                String origTitle = d.getTitle();
+                final String origTitle = d.getTitle();
                 String title = origTitle;
                 Integer count = columnTitles.get(origTitle);
                 // if title is used the first time initialize the count value
@@ -363,25 +336,23 @@ public class TermVectorNodeModel extends NodeModel {
         return new DataTableSpec(columnSpecs);
     }
 
-    private DataTableSpec createDataTableSpecAsColumns(
-            final Hashtable<Document, Integer> featureIndexTable) {
-        Hashtable<String, Integer> columnTitles =
-            new Hashtable<String, Integer>();
+    private DataTableSpec createDataTableSpecAsColumns(final Map<Document, Integer> featureIndexTable) {
+        final Map<String, Integer> columnTitles = new HashMap<String, Integer>();
 
-        int featureCount = featureIndexTable.size();
-        DataColumnSpec[] columnSpecs = new DataColumnSpec[featureCount + 1];
+        final int featureCount = featureIndexTable.size();
+        final DataColumnSpec[] columnSpecs = new DataColumnSpec[featureCount + 1];
 
         // add document column
         DataColumnSpecCreator columnSpecCreator = new DataColumnSpecCreator("Term", m_termFac.getDataType());
         columnSpecs[0] = columnSpecCreator.createSpec();
 
         // add feature vector columns
-        Set<Document> documents = featureIndexTable.keySet();
-        for (Document d : documents) {
-            int index = featureIndexTable.get(d) + 1;
+        for (final Entry<Document, Integer> entry : featureIndexTable.entrySet()) {
+            final Document d = entry.getKey();
+            int index = entry.getValue() + 1;
 
             // avoid duplicate titles by adding numbers if titles are equal.
-            String origTitle = d.getTitle();
+            final String origTitle = d.getTitle();
             String title = origTitle;
             Integer count = columnTitles.get(origTitle);
             // if title is used the first time initialize the count value with 1
@@ -389,15 +360,14 @@ public class TermVectorNodeModel extends NodeModel {
                 count = 1;
                 columnTitles.put(origTitle, count);
 
-            // if title occurs another time, add the count value
+                // if title occurs another time, add the count value
             } else if (count >= 1) {
                 count++;
                 title += " - #" + count;
                 columnTitles.put(origTitle, count);
             }
 
-            columnSpecCreator = new DataColumnSpecCreator(title,
-                    DoubleCell.TYPE);
+            columnSpecCreator = new DataColumnSpecCreator(title, DoubleCell.TYPE);
             columnSpecs[index] = columnSpecCreator.createSpec();
         }
 
@@ -406,7 +376,7 @@ public class TermVectorNodeModel extends NodeModel {
     }
 
     private List<DoubleCell> initFeatureVector(final int size) {
-        List<DoubleCell> featureVector = new ArrayList<DoubleCell>(size);
+        final List<DoubleCell> featureVector = new ArrayList<DoubleCell>(size);
         for (int i = 0; i < size; i++) {
             featureVector.add(i, DEFAULT_CELL);
         }
